--- a/鼠标右键点击弹窗.html
+++ b/鼠标右键点击弹窗.html
@@ -15,7 +15,7 @@
 		var box = document.getElementById('box');
 
 		box.addEventListener('contextmenu',function(e){
-			e.preventDefault();  //组织默认右键功能
+			e.preventDefault();  //阻止默认右键功能
 			alert('ok');
 		},false)
 
