--- a/js监听img加载完成.html
+++ b/js监听img加载完成.html
@@ -16,7 +16,7 @@
 	</div>
 
 
-	<!-- 图片需要自己添加到本地 -->
+	<!-- 图片需要自己添加到本地 协议要走http or https -->
 	<script>
 		var img_arr = ['1.jpg','2.png','2.jpg'];
 		var nums = img_arr.length;
