添加失败提示

--- a/js监听img加载完成.html
+++ b/js监听img加载完成.html
@@ -16,9 +16,9 @@
 	</div>
 
 
-	<!-- 图片需要自己添加到本地 协议要走http or https -->
+	<!-- 图片需要自己添加到本地  协议要走http or https -->
 	<script>
-		var img_arr = ['1.jpg','2.png','2.jpg'];
+		var img_arr = ['1.jpg','2.png','2.jpg','3.png'];
 		var nums = img_arr.length;
 		var start = 0;
 		for(var i in img_arr){
@@ -30,6 +30,11 @@
 					if(start == nums){
 						console.log('全部加载完成');
 					}
+					document.getElementById('loading').style.width = (start/nums)*100 + '%';
+				};
+				img.onerror = function(){
+					start++;
+					console.log(img_arr[j] + '失败');
 					document.getElementById('loading').style.width = (start/nums)*100 + '%';
 				}
 			})(i);
