--- a/lazyman.html
+++ b/lazyman.html
@@ -59,7 +59,7 @@
 			return new _lazyman(_name);
 		}
 
-		LazyMan('zhangchao').eat('milk').sleep(5000).sleepFirst(2000);
+		LazyMan('TinyZ').eat('milk').sleep(5000).sleepFirst(2000);
 
 
 
